Cleaned up code, added tests and more logging.

--- a/services/Skyra.UnitTests/Skyra.UnitTests.csproj
+++ b/services/Skyra.UnitTests/Skyra.UnitTests.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Skyra.Database\Skyra.Database.csproj" />
       <ProjectReference Include="..\Skyra.Grpc\Skyra.Grpc.csproj" />
+      <ProjectReference Include="..\Skyra.Notifications\Skyra.Notifications.csproj" />
     </ItemGroup>
 
 </Project>
